# Zia

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.bat  build.sh  conanfile.txt
HttpClass/: Body.hpp  HttpRequest.cpp  HttpRequest.hpp
Modules/test/: CMakeLists.txt  module.cpp
Server/_tester/: Interface.hpp  README.txt
Server/_tester/foo_dynlib/: CMakeLists.txt  InterfaceImpl.cpp  InterfaceImpl.hpp
Server/dynloader/src/: DynLib.cpp
Server/include/Network/: NetworkManager.hpp
Sources/include/Core/: Configurations.hpp  Parser.hpp
Sources/include/DynLib/: DynLib.hpp
Sources/include/Ihm/: CmdLine.hpp
Sources/include/Network/: BoostNetworkClient.hpp  BoostNetworkServer.hpp  Client.hpp  IClient.hpp  INetworkClient.hpp  INetworkServer.hpp  NetworkManager.hpp  Request.hpp  User.hpp
Sources/src/: main.cpp
Sources/src/Core/: Configurations.cpp  Parser.cpp  Request.cpp
Sources/src/Ihm/: CmdLine.cpp
Sources/src/Network/: BoostNetworkClient.cpp  BoostNetworkServer.cpp  Client.cpp  NetworkManager.cpp  Request.cpp
_tester/: CMakeLists.txt  main.cpp
documentation/: BoostNetworkClient_8hpp.html  BoostNetworkClient_8hpp__dep__incl.map  BoostNetworkClient_8hpp__dep__incl.md5  BoostNetworkClient_8hpp__incl.map  BoostNetworkClient_8hpp__incl.md5  BoostNetworkClient_8hpp_source.html  BoostNetworkServer_8hpp.html  BoostNetworkServer_8hpp__dep__incl.map  BoostNetworkServer_8hpp__dep__incl.md5  BoostNetworkServer_8hpp__incl.map  BoostNetworkServer_8hpp__incl.md5  BoostNetworkServer_8hpp_source.html  CmdLine_8cpp.html  CmdLine_8cpp__incl.map  CmdLine_8cpp__incl.md5  CmdLine_8hpp.html  CmdLine_8hpp__dep__incl.map  CmdLine_8hpp__dep__incl.md5  CmdLine_8hpp__incl.map  CmdLine_8hpp__incl.md5  CmdLine_8hpp_source.html  ConfigNode_8hpp_source.html  Configurations_8cpp.html  Configurations_8cpp__incl.map  Configurations_8cpp__incl.md5  Configurations_8hpp.html  Configurations_8hpp__dep__incl.map  Configurations_8hpp__dep__incl.md5  Configurations_8hpp__incl.map  Configurations_8hpp__incl.md5  Configurations_8hpp_source.html  File_8cpp.html  File_8cpp__incl.map  File_8cpp__incl.md5  File_8hpp.html  File_8hpp__dep__incl.map  File_8hpp__dep__incl.md5  File_8hpp__incl.map  File_8hpp__incl.md5  File_8hpp_source.html  (+308 more)
documentation/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  (+10 more)
dynloader/: CMakeLists.txt
dynloader/include/: Lib.hpp
example/: config.linux.yml  config.windows.yml  config.yml
example/www/: index.php
inc/: IConfigNode.hpp
inc/Core/Configs/: Configurations.hpp  Host.hpp  Module.hpp  Modules.hpp  ModulesContainer.hpp  Route.hpp
inc/Core/Http/: HttpRequest.hpp  HttpResponse.hpp
inc/Core/Listeners/: ListenersControl.hpp
inc/Core/Module/: Module.hpp
inc/Network/: BoostNetworkClient.hpp  BoostNetworkServer.hpp  INetworkServer.hpp  NetworkManager.hpp
inc/yconf/: ConfigNode.hpp  Helper.hpp
latex/: BoostNetworkClient_8hpp.tex  BoostNetworkClient_8hpp__dep__incl.md5  BoostNetworkClient_8hpp__incl.md5  BoostNetworkServer_8hpp.tex  BoostNetworkServer_8hpp__dep__incl.md5  BoostNetworkServer_8hpp__incl.md5  CmdLine_8cpp.tex  CmdLine_8cpp__incl.md5  CmdLine_8hpp.tex  CmdLine_8hpp__dep__incl.md5  CmdLine_8hpp__incl.md5  Configurations_8cpp.tex  Configurations_8cpp__incl.md5  Configurations_8hpp.tex  Configurations_8hpp__dep__incl.md5  Configurations_8hpp__incl.md5  File_8cpp.tex  File_8cpp__incl.md5  File_8hpp.tex  File_8hpp__dep__incl.md5  File_8hpp__incl.md5  Host_8cpp.tex  Host_8cpp__incl.md5  Host_8hpp.tex  Host_8hpp__dep__incl.md5  Host_8hpp__incl.md5  INetworkServer_8hpp.tex  INetworkServer_8hpp__dep__incl.md5  INetworkServer_8hpp__incl.md5  ListenersControl_8cpp.tex  ListenersControl_8cpp__incl.md5  ModuleFile_8cpp.tex  ModuleFile_8cpp__incl.md5  ModulePhp_8cpp.tex  ModulePhp_8cpp__incl.md5  ModuleProxy_8cpp.tex  ModuleProxy_8cpp__incl.md5  ModulesContainer_8cpp.tex  ModulesContainer_8cpp__incl.md5  ModulesContainer_8hpp.tex  (+124 more)
libs/dynlib/: CMakeLists.txt
libs/dynlib/include/: DynLib.hpp
libs/dynlib/src/: DLException.cpp
libs/yaml-config/: CMakeLists.txt
libs/yaml-config/include/: IConfigNode.hpp
libs/yaml-config/include/yconf/: ConfigFile.hpp  ConfigNode.hpp  NoValueException.hpp  util.hpp
libs/yaml-config/src/: ConfigFile.cpp  ConfigNode.cpp  NoValueException.cpp  util.cpp
modules/File/: File.cpp  File.hpp
modules/Php/: Php.cpp  Php.hpp
modules/Proxy/: Proxy.cpp  Proxy.hpp
modules/sayhello/: SayHello.cpp  SayHello.hpp
server/src/: main.cpp
server/src/Core/: User.cpp
server/src/Network/: BoostNetworkServer.cpp  NetworkManager.cpp
src/: ConfigNode.cpp  main.cpp
src/Core/Configs/: Configurations.cpp  Host.cpp  Module.cpp  ModulesContainer.cpp  Route.cpp
src/Core/Http/: HttpRequest.cpp  HttpResponse.cpp
src/Core/Listeners/: ListenersControl.cpp
src/Core/Module/: Module.cpp
src/Ihm/: CmdLine.cpp
src/Network/: BoostNetworkClient.cpp  BoostNetworkServer.cpp  NetworkManager.cpp  Request.cpp
tests/: HostConf.cpp  HttpRequest.cpp  HttpResponse.cpp  Makefile  ModuleConf.cpp  ModuleFile.cpp  ModulePhp.cpp  ModuleProxy.cpp  Redirector.hpp  RouteConf.cpp  Server.cpp  yml.cpp
tests/html/: index-sort-f.html  index-sort-l.html  index.html
tests/html/boost/: foreach.hpp.func-sort-c.html  foreach.hpp.func.html  foreach.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  throw_exception.hpp.func-sort-c.html  throw_exception.hpp.func.html  throw_exception.hpp.gcov.html  type_index.hpp.func-sort-c.html  type_index.hpp.func.html  (+1 more)
yaml-config/: CMakeLists.txt
yaml-config/include/: ConfigFile.hpp  NoValueException.hpp  util.hpp
yaml-config/src/: ConfigFile.cpp  NoValueException.cpp  util.cpp
(+1116 files in other folders)
